# argparse

./: .gitignore  CMakeLists.txt  README.md  argparse.cpp  argparse.hpp
cmake/: Config.cmake.in
examples/: CMakeLists.txt  main.cpp
src/: argparse.hpp  argument.cpp  argument.hpp  parser.cpp  parser.hpp
